--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.2.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "mathjs": "^11.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
