--- a/api/package.json
+++ b/api/package.json
@@ -7,14 +7,19 @@
   "private": true,
   "scripts": {
     "start": "dotenv -c -- nodemon --watch './**/*.ts' --watch 'tsconfig.json' --watch '.env' --exec 'node --inspect -r ts-node/register' ./index.ts",
-    "typecheck": "tsc --noEmit"
+    "build": "tsc && rimraf ./**/*.ts",
+    "typecheck": "tsc --noEmit",
+    "docker:build": "docker build . -t sethrogers7420/reverielabschallenge",
+    "docker:run": "docker run -p 7000:7000 sethrogers7420/reverielabschallenge",
+    "docker:ssh": "docker run -p 7000:7000 -it sethrogers7420/reverielabschallenge /bin/bash"
   },
   "dependencies": {
     "axios": "^1.2.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
-    "mathjs": "^11.5.0"
+    "mathjs": "^11.5.0",
+    "rimraf": "^4.1.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
